# visionflow-finance

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  resend_api_key.txt.txt  schema.sql
.github/workflows/: build-apk.yml
core/: budget_engine.py  classifier.py  config.py  db_client.py  email_service.py  ocr_engine.py
data/: transacciones_cache.json  transacciones_cache_80d19d03-ebf5-4db6-b38f-8dab422b40a7.json  transacciones_cache_a3344156-e79b-4e92-b3ae-dd3bc9497ff7.json
ui/: auth.py  camera.py  consejos.py  dashboard.py  historial.py  scanner.py
