[project]
name = "visionflow-finance"
version = "1.0.0"
description = "App de finanzas personales con escaneo OCR de tickets"
authors = [
    {name = "VisionFlow", email = "dev@visionflow.finance"}
]
requires-python = ">=3.9"
dependencies = [
    "flet>=0.24.0",
    "Pillow>=10.0.0",
    "flet-camera>=0.84.0",
    "groq>=0.11.0",
]

[tool.flet.app]
module = "main"
path = "."
org = "com.visionflow.finance"
product = "VisionFlow Finance"

[tool.flet.android.permission]
"android.permission.CAMERA" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.READ_MEDIA_IMAGES" = true
